<?xml version="1.0" encoding="utf-8" standalone="no"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frame1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="24dp"
        android:paddingTop="32dp"
        android:elevation="8dp"
        android:paddingEnd="22dp">

        <TextView
            android:id="@+id/tv_login_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/tv_enter_number_email"
            app:layout_constraintLeft_toLeftOf="parent"
            tools:text="@string/login_or_signup" />


        <TextView
            android:id="@+id/tv_enter_number_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:lineSpacingExtra="4sp"
            android:text="@string/enter_your_mobile_number"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/ll_enter_no"
            app:layout_constraintLeft_toLeftOf="parent" />

        <LinearLayout
            android:id="@+id/ll_enter_no"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/shape_rectangle_filled_white_outline_gray_r6"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingTop="3dp"
            android:paddingRight="10dp"
            android:paddingBottom="3dp"
            app:layout_constraintBottom_toTopOf="@+id/ll_proceed">

            <TextView
                android:id="@+id/tv_cc_initial"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/india_code"
                android:textColor="@color/colorText"
                android:textSize="16sp"
                android:textStyle="bold" />

            <View
                android:id="@+id/divider"
                android:layout_width="1dp"
                android:layout_height="38dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:background="@color/divider" />

            <EditText
                android:id="@+id/et_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:background="@null"
                android:maxLength="10"
                android:gravity="center|start"
                android:hint="@string/label_mobile_number_hint"
                android:inputType="number"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_error_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/wrong_otp"
            android:textColor="@color/faculty_text"
            android:textSize="12sp"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll_enter_no" />

        <com.classplus.connect.login.ui.LoadingButtonGetOtp
            android:id="@+id/ll_proceed"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginTop="32dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll_enter_no" />

        <View
            android:id="@+id/line_3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="@color/grayE5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_proceed" />

        <TextView
            android:id="@+id/tv_terms_conditions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="16dp"
            android:text="@string/str_terms_and_conditions_new"
            android:textAlignment="center"
            android:textColor="@color/colorText_Black_Alpha_99"
            android:textSize="12sp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/line_3" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
